Change name back

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "lasers",
+	"name": "laser-theme",
 	"displayName": "Lasers",
 	"description": "An Outrun theme with italics, based on the popular GMK Laser keycap set from MiTo.",
 	"version": "0.9.0",
